remove duplicate testcase

--- a/test/testcases/anotherincludedir/Makefile
+++ b/test/testcases/anotherincludedir/Makefile
@@ -2,7 +2,7 @@ CXX := c++
 LIBNAME := libmylib.so
 
 $(LIBNAME):
-	$(CXX) mylib.cpp -shared -o $(LIBNAME)
+	$(CXX) somefunction.cpp -shared -o $(LIBNAME)
 
 clean:
 	rm $(LIBNAME)
