--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-black==22.3.0
+black
 clang==12.0.1
 Cython==0.29.28
 Jinja2==3.0.3
-more_itertools==8.12.0
-numpy==1.22.2
-setuptools==62.1.0
+more_itertools
+numpy
+setuptools
