--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-black
+black==23.1.0
 clang==12.0.1
 Cython==0.29.28
 Jinja2==3.0.3
-more_itertools
-numpy
+more_itertools==9.0.0
+numpy==1.24.2
 setuptools
